# plotnik

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  release.toml
crates/plotnik-analyze/: Cargo.toml
crates/plotnik-analyze/src/: lib.rs
crates/plotnik-arborium/: Cargo.toml  src
crates/plotnik-arborium/src/: lib.rs
crates/plotnik-bytecode/: Cargo.toml  build.rs
crates/plotnik-bytecode/src/: dfa.rs  lib.rs  predicate_op.rs
crates/plotnik-bytecode/src/bytecode/: aligned_vec.rs  aligned_vec_tests.rs  constants.rs  dump.rs  effect_stack.rs  effects.rs  effects_tests.rs  entrypoint.rs  forged_tests.rs  format.rs  format_tests.rs  header.rs  header_tests.rs  ids.rs  instructions.rs  instructions_tests.rs  mod.rs  module.rs  module_tests.rs  nav.rs  nav_tests.rs  node_kind_constraint_tests.rs  node_type_ir.rs  node_type_ir_tests.rs  sections.rs  type_meta.rs  type_meta_tests.rs
crates/plotnik-bytecode/src/type_system/: arity.rs  arity_tests.rs  kind.rs  kind_tests.rs  mod.rs  primitives.rs  primitives_tests.rs  quantifier.rs
crates/plotnik-cli/: Cargo.toml  build.rs
crates/plotnik-cli/docs/: REFERENCE.md  lang-reference.md
crates/plotnik-cli/examples/abi-compat/: main.rs
crates/plotnik-cli/src/: cli.rs  error.rs  language_registry.rs  language_registry_tests.rs  lib.rs  main.rs  util.rs  vm_semantics_tests.rs
crates/plotnik-cli/src/cli/: args.rs  commands.rs  dispatch.rs  dispatch_tests.rs  limits.rs  limits_tests.rs  mod.rs  shebang.rs  shebang_tests.rs
crates/plotnik-cli/src/commands/: abi_compat_tests.rs  ast.rs  ast_tests.rs  check.rs  check_tests.rs  compile.rs  debug.rs  docs.rs  dump.rs  exec.rs  exec_tests.rs  generate.rs  generate_tests.rs  infer.rs  inspect.rs  lang.rs  lang_resolver.rs  lang_tests.rs  langs.rs  langs_tests.rs  language_registry.rs  mod.rs  query_loader.rs  run.rs  run_common.rs  run_common_tests.rs  runtime_report.rs  runtime_report_tests.rs  trace.rs  tree.rs  tree_tests.rs  types.rs
crates/plotnik-compile/: Cargo.toml
crates/plotnik-compile/src/: lib.rs
crates/plotnik-compiler/: Cargo.toml  build.rs
crates/plotnik-compiler-analyze-names/: Cargo.toml
crates/plotnik-compiler-analyze-names/src/: lib.rs  symbol_table.rs
crates/plotnik-compiler-analyze-names/src/analyze/: mod.rs
crates/plotnik-compiler-analyze-refs/: Cargo.toml
crates/plotnik-compiler-analyze-refs/src/: dependencies.rs  lib.rs  recursion.rs  refs.rs
crates/plotnik-compiler-analyze-refs/src/analyze/: mod.rs
crates/plotnik-compiler-analyze-shape/: Cargo.toml
crates/plotnik-compiler-analyze-shape/src/: invariants.rs  lib.rs
crates/plotnik-compiler-analyze-shape/src/analyze/: mod.rs
crates/plotnik-compiler-analyze-shape/src/validation/: alt_kinds.rs  anchors.rs  empty_constructs.rs  mod.rs  predicates.rs
crates/plotnik-compiler-analyze-types/: Cargo.toml
crates/plotnik-compiler-analyze-types/src/: entrypoints.rs  lib.rs
crates/plotnik-compiler-analyze-types/src/analyze/: mod.rs
crates/plotnik-compiler-analyze-types/src/type_check/: capture_mechanism.rs  context.rs  infer.rs  mod.rs  types.rs  unify.rs  unify_tests.rs
crates/plotnik-compiler-core/: Cargo.toml
crates/plotnik-compiler-core/src/: ast.rs  capture_mechanism.rs  cst_tests.rs  dependency_analysis.rs  grammar_binding.rs  ir.rs  lib.rs  located.rs  span.rs  symbol_table.rs  type_analysis.rs  type_context.rs  type_shape.rs  validated_ast.rs  visitor.rs
crates/plotnik-compiler-core/src/emit/: context.rs  error.rs  mod.rs  regex_table.rs  string_table.rs  string_table_tests.rs  type_table.rs
crates/plotnik-compiler-core/src/source/: mod.rs
crates/plotnik-compiler-emit-instructions/: Cargo.toml
crates/plotnik-compiler-emit-instructions/src/: instructions.rs  lib.rs
crates/plotnik-compiler-emit-instructions/src/emit/: mod.rs
crates/plotnik-compiler-emit-layout/: Cargo.toml
crates/plotnik-compiler-emit-layout/src/: layout.rs  lib.rs
crates/plotnik-compiler-emit-layout/src/emit/: mod.rs
crates/plotnik-compiler-emit-module/: Cargo.toml
crates/plotnik-compiler-emit-module/src/: lib.rs
crates/plotnik-compiler-emit-module/src/emit/: mod.rs
crates/plotnik-compiler-emit-regex/: Cargo.toml
crates/plotnik-compiler-emit-regex/src/: lib.rs  regex_table_tests.rs
crates/plotnik-compiler-emit-strings/: Cargo.toml
crates/plotnik-compiler-emit-strings/src/: lib.rs
crates/plotnik-compiler-emit-types/: Cargo.toml
crates/plotnik-compiler-emit-types/src/: lib.rs
crates/plotnik-compiler-lower/: Cargo.toml
crates/plotnik-compiler-lower-dead/: Cargo.toml
crates/plotnik-compiler-lower-dead/src/: dce.rs  lib.rs
crates/plotnik-compiler-lower-epsilon/: Cargo.toml
crates/plotnik-compiler-lower-epsilon/src/: epsilon_elim.rs  lib.rs
crates/plotnik-compiler-lower-nav/: Cargo.toml
crates/plotnik-compiler-lower-nav/src/: collapse_up.rs  collapse_up_tests.rs  lib.rs
crates/plotnik-compiler-lower-pack/: Cargo.toml
crates/plotnik-compiler-lower-pack/src/: lib.rs  lower.rs  lower_tests.rs
crates/plotnik-compiler-lower-thompson/: Cargo.toml
crates/plotnik-compiler-lower-thompson/src/: capture.rs  capture_tests.rs  compiler.rs  expressions.rs  expressions_tests.rs  lib.rs  navigation.rs  quantifier.rs  scope.rs  sequences.rs  verify.rs
crates/plotnik-compiler-lower/src/: lib.rs
crates/plotnik-compiler-parse/: Cargo.toml
crates/plotnik-compiler-parse/src/: lib.rs
crates/plotnik-compiler-parse/src/parser/: cst.rs  (+3 more)
crates/plotnik-compiler/src/: lib.rs  test_utils.rs
crates/plotnik-core/: Cargo.toml
crates/plotnik-core/examples/: profile_grammar.rs
crates/plotnik-core/src/: interner.rs  interner_tests.rs  invariants.rs  lib.rs  lib_tests.rs  utils.rs  utils_tests.rs
crates/plotnik-diagnostics/: Cargo.toml
crates/plotnik-diagnostics/src/: lib.rs
crates/plotnik-emit/: Cargo.toml
crates/plotnik-emit/src/: lib.rs
crates/plotnik-ir/: Cargo.toml
crates/plotnik-ir/src/: lib.rs
crates/plotnik-langs/: Cargo.toml  build.rs
crates/plotnik-langs/src/: builtin.rs  dynamic.rs  lib.rs  lib_tests.rs
(+5005 files in other folders)
