[workspace]
resolver = "2"
members = [
    "crates/plotnik-bytecode",
    "crates/plotnik-cli",
    "crates/plotnik-compiler",
    "crates/plotnik-compiler-analyze",
    "crates/plotnik-compiler-analyze-grammar",
    "crates/plotnik-compiler-analyze-names",
    "crates/plotnik-compiler-analyze-refs",
    "crates/plotnik-compiler-analyze-shape",
    "crates/plotnik-compiler-analyze-types",
    "crates/plotnik-compiler-core",
    "crates/plotnik-compiler-diagnostics",
    "crates/plotnik-compiler-emit",
    "crates/plotnik-compiler-ir",
    "crates/plotnik-compiler-lower",
    "crates/plotnik-compiler-parse",
    "crates/plotnik-compiler-typegen",
    "crates/plotnik-core",
    "crates/plotnik-lib",
    "crates/plotnik-query",
    "crates/plotnik-vm",
]

[workspace.package]
version = "0.3.3"
license = "Apache-2.0"
repository = "https://github.com/plotnik-lang/plotnik"
edition = "2024"

[workspace.dependencies]
plotnik-bytecode = { path = "crates/plotnik-bytecode", version = "0.3.3" }
plotnik-compiler = { path = "crates/plotnik-compiler", version = "0.3.3" }
plotnik-compiler-analyze = { path = "crates/plotnik-compiler-analyze", version = "0.3.3" }
plotnik-compiler-analyze-grammar = { path = "crates/plotnik-compiler-analyze-grammar", version = "0.3.3" }
plotnik-compiler-analyze-names = { path = "crates/plotnik-compiler-analyze-names", version = "0.3.3" }
plotnik-compiler-analyze-refs = { path = "crates/plotnik-compiler-analyze-refs", version = "0.3.3" }
plotnik-compiler-analyze-shape = { path = "crates/plotnik-compiler-analyze-shape", version = "0.3.3" }
plotnik-compiler-analyze-types = { path = "crates/plotnik-compiler-analyze-types", version = "0.3.3" }
plotnik-compiler-core = { path = "crates/plotnik-compiler-core", version = "0.3.3" }
plotnik-compiler-diagnostics = { path = "crates/plotnik-compiler-diagnostics", version = "0.3.3" }
plotnik-compiler-emit = { path = "crates/plotnik-compiler-emit", version = "0.3.3" }
plotnik-compiler-ir = { path = "crates/plotnik-compiler-ir", version = "0.3.3" }
plotnik-compiler-lower = { path = "crates/plotnik-compiler-lower", version = "0.3.3" }
plotnik-compiler-parse = { path = "crates/plotnik-compiler-parse", version = "0.3.3" }
plotnik-compiler-typegen = { path = "crates/plotnik-compiler-typegen", version = "0.3.3" }
plotnik-core = { path = "crates/plotnik-core", version = "0.3.3" }
plotnik-lib = { path = "crates/plotnik-lib", version = "0.3.3" }
plotnik-query = { path = "crates/plotnik-query", version = "0.3.3" }
plotnik-vm = { path = "crates/plotnik-vm", version = "0.3.3" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
unwrap_used = "deny"

# Keep arithmetic overflow/underflow loud in release, not just debug: a wrap that
# breaks an internal invariant must crash (the same discipline as panic!/.expect()),
# never silently corrupt downstream offsets/indices.
[profile.release]
overflow-checks = true
