[workspace]
resolver = "2"
members = [
    "crates/plotnik",
    "crates/plotnik-cli",
    "crates/plotnik-lib",
    "crates/plotnik-macros",
    "crates/plotnik-rt",
    "crates/plotnik-tests",
    "crates/plotnik-wasm",
]

[workspace.package]
version = "0.3.3"
license = "Apache-2.0"
repository = "https://github.com/plotnik-lang/plotnik"
edition = "2024"

[workspace.dependencies]
plotnik-lib = { path = "crates/plotnik-lib", version = "0.3.3" }
plotnik-rt = { path = "crates/plotnik-rt", version = "0.3.3", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
unwrap_used = "deny"

# Keep arithmetic overflow/underflow loud in release, not just debug: a wrap that
# breaks an internal invariant must crash (the same discipline as panic!/.expect()),
# never silently corrupt downstream offsets/indices.
[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

# Benches inherit release; line tables let profilers (samply, Instruments)
# symbolicate the inlined hot loop at zero runtime cost.
[profile.bench]
debug = "line-tables-only"
