[package]
name = "plotnik-bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bytecode format and runtime types for Plotnik"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
plotnik-core.workspace = true
crc32fast = "1.4"
regex-automata = { version = "0.4", features = ["dfa-search"] }
thiserror = "2.0.17"

[dev-dependencies]
insta = { version = "=1.48.0", features = ["yaml"] }
proptest = "1"
