[package]
name = "plotnik-bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bytecode format and runtime types for Plotnik"
build = "build.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
plotnik-core.workspace = true
crc32fast = "1.4"
regex-automata = { version = "0.4", features = ["dfa-search"] }
thiserror = "2.0.17"

[build-dependencies]
cargo_metadata = "0.23"

[dev-dependencies]
# Test-time only: the forged-module tests mint real fixtures with the compiler,
# then tamper and load them. The compiler depends on this crate, so this is a
# dev-dependency cycle — allowed by Cargo because it never enters the build graph.
plotnik-compiler.workspace = true
insta = { version = "=1.48.0", features = ["yaml"] }
proptest = "=1.11.0"
