[package]
name = "plotnik-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CLI for plotnik - typed query language for tree-sitter AST"
repository = "https://github.com/plotnik-lang/plotnik"
documentation = "https://docs.rs/plotnik-cli"
keywords = ["tree-sitter", "query", "ast", "parser", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
include = ["src/**/*", "Cargo.toml", "docs/REFERENCE.md"]

[features]
default = [
    "bash",
    "c",
    "cpp",
    "csharp",
    "css",
    "elixir",
    "go",
    "haskell",
    "hcl",
    "html",
    "java",
    "javascript",
    "json",
    "kotlin",
    "lua",
    "nix",
    "php",
    "python",
    "ruby",
    "rust",
    "scala",
    "solidity",
    "swift",
    "typescript",
    "yaml",
]
bash = ["plotnik-langs/bash"]
c = ["plotnik-langs/c"]
cpp = ["plotnik-langs/cpp"]
csharp = ["plotnik-langs/csharp"]
css = ["plotnik-langs/css"]
elixir = ["plotnik-langs/elixir"]
go = ["plotnik-langs/go"]
haskell = ["plotnik-langs/haskell"]
hcl = ["plotnik-langs/hcl"]
html = ["plotnik-langs/html"]
java = ["plotnik-langs/java"]
javascript = ["plotnik-langs/javascript"]
json = ["plotnik-langs/json"]
kotlin = ["plotnik-langs/kotlin"]
lua = ["plotnik-langs/lua"]
nix = ["plotnik-langs/nix"]
php = ["plotnik-langs/php"]
python = ["plotnik-langs/python"]
ruby = ["plotnik-langs/ruby"]
rust = ["plotnik-langs/rust"]
scala = ["plotnik-langs/scala"]
solidity = ["plotnik-langs/solidity"]
swift = ["plotnik-langs/swift"]
typescript = ["plotnik-langs/typescript"]
yaml = ["plotnik-langs/yaml"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
plotnik-langs = { version = "0.1.0", path = "../plotnik-langs", default-features = false }
plotnik-lib = { version = "0.1.0", path = "../plotnik-lib" }
tree-sitter = "0.26"
