[package]
name = "plotnik-cli"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "CLI for plotnik - typed query language for tree-sitter AST"
repository = "https://github.com/plotnik-lang/plotnik"
documentation = "https://docs.rs/plotnik-cli"
keywords = ["tree-sitter", "query", "ast", "parser", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
include = ["src/**/*", "Cargo.toml"]

[[bin]]
name = "plotnik"
path = "src/main.rs"

[features]
default = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-c-sharp",
    "lang-css",
    "lang-elixir",
    "lang-go",
    "lang-haskell",
    "lang-hcl",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kotlin",
    "lang-lua",
    "lang-nix",
    "lang-php",
    "lang-python",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-swift",
    "lang-typescript",
    "lang-tsx",
    "lang-yaml",
]
lang-bash = ["plotnik-langs/lang-bash"]
lang-c = ["plotnik-langs/lang-c"]
lang-cpp = ["plotnik-langs/lang-cpp"]
lang-c-sharp = ["plotnik-langs/lang-c-sharp"]
lang-css = ["plotnik-langs/lang-css"]
lang-elixir = ["plotnik-langs/lang-elixir"]
lang-go = ["plotnik-langs/lang-go"]
lang-haskell = ["plotnik-langs/lang-haskell"]
lang-hcl = ["plotnik-langs/lang-hcl"]
lang-html = ["plotnik-langs/lang-html"]
lang-java = ["plotnik-langs/lang-java"]
lang-javascript = ["plotnik-langs/lang-javascript"]
lang-json = ["plotnik-langs/lang-json"]
lang-kotlin = ["plotnik-langs/lang-kotlin"]
lang-lua = ["plotnik-langs/lang-lua"]
lang-nix = ["plotnik-langs/lang-nix"]
lang-php = ["plotnik-langs/lang-php"]
lang-python = ["plotnik-langs/lang-python"]
lang-ruby = ["plotnik-langs/lang-ruby"]
lang-rust = ["plotnik-langs/lang-rust"]
lang-scala = ["plotnik-langs/lang-scala"]
lang-swift = ["plotnik-langs/lang-swift"]
lang-typescript = ["plotnik-langs/lang-typescript"]
lang-tsx = ["plotnik-langs/lang-tsx"]
lang-yaml = ["plotnik-langs/lang-yaml"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
plotnik-core = { version = "0.1.0", path = "../plotnik-core" }
plotnik-langs = { version = "0.1.0", path = "../plotnik-langs", default-features = false }
plotnik-lib = { version = "0.1.0", path = "../plotnik-lib" }
serde_json = "1.0"
arborium-tree-sitter = "2.3.2"