[package]
name = "plotnik-compile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AST to IR compilation for Plotnik queries"

[lints]
workspace = true

[dependencies]
plotnik-analyze.workspace = true
plotnik-bytecode.workspace = true
plotnik-core.workspace = true
plotnik-ir.workspace = true
plotnik-parser.workspace = true
indexmap = "2"
