[package]
name = "plotnik-compiler-analyze-shape"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AST-shape validation pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-compiler-core.workspace = true
plotnik-compiler-diagnostics.workspace = true
indexmap = "2"
regex-syntax = "0.8"
rowan = "0.16.1"
