[package]
name = "plotnik-compiler-analyze-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type analysis pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-diagnostics.workspace = true
plotnik-compiler-parse.workspace = true
plotnik-compiler-analyze-names.workspace = true
plotnik-compiler-analyze-refs.workspace = true
plotnik-compiler-analyze-shape.workspace = true
plotnik-core.workspace = true
indexmap = "2"
rowan = "0.16.1"
