[package]
name = "plotnik-compiler-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared data types for the Plotnik compiler pipeline"

[lints]
workspace = true

[dependencies]
plotnik-core.workspace = true
plotnik-bytecode.workspace = true
indexmap = "2"
logos = "0.16.0"
rowan = "0.16.1"

