[package]
name = "plotnik-compiler-emit-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Instruction layout emission pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-core.workspace = true
