[package]
name = "plotnik-compiler-emit-module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bytecode module emission pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-core.workspace = true
plotnik-core.workspace = true
crc32fast = "1.4"
