[package]
name = "plotnik-compiler-emit-strings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "String table emission pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-core.workspace = true
