[package]
name = "plotnik-compiler-emit-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type table emission pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-core.workspace = true
