[package]
name = "plotnik-compiler-lower-dead"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dead IR elimination pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-analyze-types.workspace = true
plotnik-compiler-core.workspace = true
indexmap = "2"
