[package]
name = "plotnik-compiler-lower-epsilon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Epsilon elimination pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-analyze-types.workspace = true
plotnik-compiler-ir.workspace = true
plotnik-compiler-lower-thompson.workspace = true
indexmap = "2"
