[package]
name = "plotnik-compiler-lower-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bytecode-capacity IR packing pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-ir.workspace = true
plotnik-compiler-lower-thompson.workspace = true
