[package]
name = "plotnik-compiler-lower-thompson"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thompson IR construction pass for the Plotnik compiler"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-compiler-core.workspace = true
plotnik-compiler-analyze-names.workspace = true
plotnik-compiler-analyze-types.workspace = true
plotnik-compiler-ir.workspace = true
plotnik-compiler-parse.workspace = true
plotnik-core.workspace = true
indexmap = "2"
