[package]
name = "plotnik-compiler-lower"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AST to IR compilation for Plotnik queries"

[lints]
workspace = true

[dependencies]
plotnik-compiler-analyze.workspace = true
plotnik-bytecode.workspace = true
plotnik-core.workspace = true
plotnik-compiler-ir.workspace = true
plotnik-compiler-parse.workspace = true
indexmap = "2"
