[package]
name = "plotnik-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compiler for Plotnik query language (parser, analyzer, bytecode emitter)"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-core.workspace = true
annotate-snippets = "0.12.9"
logos = "0.16.0"
indexmap = "2"
rowan = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
crc32fast = "1.4"
memmap2 = "0.9"
regex-automata = { version = "0.4", features = ["dfa-build", "dfa-search"] }
regex-syntax = "0.8"

[build-dependencies]
cargo_metadata = "0.23"

[dev-dependencies]
arborium-javascript = "2.18.0"
insta = { version = "=1.48.0", features = ["yaml"] }
indoc = "=2.0.7"
serde_json = "=1.0.150"
tempfile = "=3.27.0"
