[package]
name = "plotnik-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data structures for Plotnik"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
indexmap = { version = "2", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"