[package]
name = "plotnik-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data structures for Plotnik"

[lints]
workspace = true

[dependencies]
bitflags = "2"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
regex-syntax = "0.8"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
topological-sort = "0.2"
