[package]
name = "plotnik-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Diagnostics and source maps for Plotnik"

[lints]
workspace = true

[dependencies]
annotate-snippets = "0.12.9"
rowan = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"

[dev-dependencies]
insta = { version = "=1.48.0", features = ["yaml"] }
