[package]
name = "plotnik-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Intermediate representation for Plotnik compilation"

[lints]
workspace = true

[dependencies]
plotnik-bytecode.workspace = true
plotnik-core.workspace = true
indexmap = "2"
