[package]
name = "plotnik-langs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Tree-sitter language bindings for Plotnik query language"
repository = "https://github.com/plotnik-lang/plotnik"
documentation = "https://docs.rs/plotnik-langs"
keywords = ["tree-sitter", "parser", "languages"]
categories = ["parsing", "development-tools"]
readme = "../../README.md"

[features]
default = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-c-sharp",
    "lang-css",
    "lang-elixir",
    "lang-go",
    "lang-haskell",
    "lang-hcl",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kotlin",
    "lang-lua",
    "lang-nix",
    "lang-php",
    "lang-python",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-swift",
    "lang-typescript",
    "lang-tsx",
    "lang-yaml",
]
lang-bash = ["dep:arborium-bash", "plotnik-macros/lang-bash"]
lang-c = ["dep:arborium-c", "plotnik-macros/lang-c"]
lang-cpp = ["dep:arborium-cpp", "plotnik-macros/lang-cpp"]
lang-c-sharp = ["dep:arborium-c-sharp", "plotnik-macros/lang-c-sharp"]
lang-css = ["dep:arborium-css", "plotnik-macros/lang-css"]
lang-elixir = ["dep:arborium-elixir", "plotnik-macros/lang-elixir"]
lang-go = ["dep:arborium-go", "plotnik-macros/lang-go"]
lang-haskell = ["dep:arborium-haskell", "plotnik-macros/lang-haskell"]
lang-hcl = ["dep:arborium-hcl", "plotnik-macros/lang-hcl"]
lang-html = ["dep:arborium-html", "plotnik-macros/lang-html"]
lang-java = ["dep:arborium-java", "plotnik-macros/lang-java"]
lang-javascript = ["dep:arborium-javascript", "plotnik-macros/lang-javascript"]
lang-json = ["dep:arborium-json", "plotnik-macros/lang-json"]
lang-kotlin = ["dep:arborium-kotlin", "plotnik-macros/lang-kotlin"]
lang-lua = ["dep:arborium-lua", "plotnik-macros/lang-lua"]
lang-nix = ["dep:arborium-nix", "plotnik-macros/lang-nix"]
lang-php = ["dep:arborium-php", "plotnik-macros/lang-php"]
lang-python = ["dep:arborium-python", "plotnik-macros/lang-python"]
lang-ruby = ["dep:arborium-ruby", "plotnik-macros/lang-ruby"]
lang-rust = ["dep:arborium-rust", "plotnik-macros/lang-rust"]
lang-scala = ["dep:arborium-scala", "plotnik-macros/lang-scala"]
lang-swift = ["dep:arborium-swift", "plotnik-macros/lang-swift"]
lang-typescript = ["dep:arborium-typescript", "plotnik-macros/lang-typescript"]
lang-tsx = ["dep:arborium-tsx", "plotnik-macros/lang-tsx"]
lang-yaml = ["dep:arborium-yaml", "plotnik-macros/lang-yaml"]

[dependencies]
paste = "1.0"
plotnik-core = { version = "0.1.0", path = "../plotnik-core" }
plotnik-macros = { version = "0.1.0", path = "../plotnik-macros" }
arborium-tree-sitter = "2.3.2"
arborium-bash = { version = "2.3.2", optional = true }
arborium-c = { version = "2.3.2", optional = true }
arborium-cpp = { version = "2.3.2", optional = true }
arborium-c-sharp = { version = "2.3.2", optional = true }
arborium-css = { version = "2.3.2", optional = true }
arborium-elixir = { version = "2.3.2", optional = true }
arborium-go = { version = "2.3.2", optional = true }
arborium-haskell = { version = "2.3.2", optional = true }
arborium-hcl = { version = "2.3.2", optional = true }
arborium-html = { version = "2.3.2", optional = true }
arborium-java = { version = "2.3.2", optional = true }
arborium-javascript = { version = "2.3.2", optional = true }
arborium-json = { version = "2.3.2", optional = true }
arborium-kotlin = { version = "2.3.2", optional = true }
arborium-lua = { version = "2.3.2", optional = true }
arborium-nix = { version = "2.3.2", optional = true }
arborium-php = { version = "2.3.2", optional = true }
arborium-python = { version = "2.3.2", optional = true }
arborium-ruby = { version = "2.3.2", optional = true }
arborium-rust = { version = "2.3.2", optional = true }
arborium-scala = { version = "2.3.2", optional = true }
arborium-swift = { version = "2.3.2", optional = true }
arborium-typescript = { version = "2.3.2", optional = true }
arborium-tsx = { version = "2.3.2", optional = true }
arborium-yaml = { version = "2.3.2", optional = true }

[build-dependencies]
cargo_metadata = "0.23"

[dev-dependencies]